src/objects/Account_BBVA_Classification__c.object
<CustomObject>
    <description>Clasificación BBVA</description>
	  <fields>
        <fullName>BE_Indicador__c</fullName>
        <formula>CASE(bbva_classification_type__c ,&apos;0&apos;,5,&apos;10&apos;,1,&apos;20&apos;,2,&apos;30&apos;,3,&apos;40&apos;,4,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indicador</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>account_id__c</fullName>
        <description>Cliente</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account BBVA Classifications</relationshipLabel>
        <relationshipName>Account_BBVA_Classifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>bbva_classification_desc__c</fullName>
        <description>Clasificación</description>
        <label>Classification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bbva_classification_type__c</fullName>
        <description>Código de la clasificación</description>
        <label>Classification code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>unique_id__c</fullName>
		<description>Identificador único</description>
        <externalId>true</externalId>
        <label>Unique identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>year_month_day_date__c</fullName>
        <description>Fecha</description>
        <label>Classification date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>is_last_date__c</fullName>
        <formula>IF(  year_month_day_date__c  &gt; ADDMONTHS(  account_id__r.account_bank_classification_last_date__c  ,-12) ,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is last date?</label>
        <type>Checkbox</type>
    </fields>
    <label>Clasificación BBVA</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ABC- {0000000000}</displayFormat>
        <label>Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clasificaciones BBVA</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>